tests/snapshots/report_snapshots__csv_formatter_empty.snap
---
source: tests/report_snapshots.rs
expression: CsvFormatter.format(&empty)
---
function,network,ledger,wasm_hash,cpu_instructions,memory_bytes,read_entries,write_entries,read_bytes,write_bytes,tx_size,non_refundable_stroops,refundable_stroops,total_stroops,total_xlm,rpc_latency_ms,prev_ledger,prev_fee_stroops,cpu_delta,memory_delta,fee_delta
(wasm upload),mainnet,0,0000000000000000,0,0,0,0,0,0,0,0,0,0,0.0000000,0,,,,,
function,network,ledger,wasm_hash,wasm_size,cpu_instructions,memory_bytes,read_entries,write_entries,read_bytes,write_bytes,tx_size,non_refundable_stroops,refundable_stroops,total_stroops,total_xlm,rpc_latency_ms
(wasm upload),mainnet,0,0000000000000000,0,0,0,0,0,0,0,0,0,0,0,0.0000000,0
