tests/snapshots/report_snapshots__csv_formatter_sample.snap
---
source: tests/report_snapshots.rs
assertion_line: 88
expression: CsvFormatter.format(&report)
---
function,network,ledger,wasm_hash,wasm_size_bytes,cpu_instructions,memory_bytes,read_entries,write_entries,read_bytes,write_bytes,tx_size,non_refundable_stroops,refundable_stroops,total_stroops,total_xlm,rpc_latency_ms
increment,testnet,3894195,abc123def456,14432,532502,0,1,1,0,136,156,4496,10931,15427,0.0015427,87
