tests/snapshots/report_snapshots__estimate_all_table_multi.snap
---
source: tests/report_snapshots.rs
assertion_line: 160
expression: batch_table(&reports)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Function                 CPU insns        Fee (stroops)                      Fee (XLM)               Ledger    Write entries │
╞════════════════════════╪════════════════╪══════════════════════════════════╪═══════════════════════╪═════════╪═══════════════╡
│ increment                532502           15427                              0.0015427               3894195   1             │
├────────────────────────┼────────────────┼──────────────────────────────────┼───────────────────────┼─────────┼───────────────┤
│ decrement                410000           12000                              0.0012000               3894195   2             │
├────────────────────────┼────────────────┼──────────────────────────────────┼───────────────────────┼─────────┼───────────────┤
│ reset                    98765            9001                               0.0009001               3894195   3             │
├────────────────────────┼────────────────┼──────────────────────────────────┼───────────────────────┼─────────┼───────────────┤
│ Summary: 3 function(s)   98765 - 532502   min 9001 / max 15427 / avg 12142   0.0009001 - 0.0015427             6             │
└────────────────────────┴────────────────┴──────────────────────────────────┴───────────────────────┴─────────┴───────────────┘
