tests/snapshots/report_snapshots__estimate_all_table_single.snap
---
source: tests/report_snapshots.rs
assertion_line: 148
expression: batch_table(&reports)
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Function                 CPU insns         Fee (stroops)                       Fee (XLM)               Ledger    Write entries │
╞════════════════════════╪═════════════════╪═══════════════════════════════════╪═══════════════════════╪═════════╪═══════════════╡
│ increment                532502            15427                               0.0015427               3894195   1             │
├────────────────────────┼─────────────────┼───────────────────────────────────┼───────────────────────┼─────────┼───────────────┤
│ Summary: 1 function(s)   532502 - 532502   min 15427 / max 15427 / avg 15427   0.0015427 - 0.0015427             1             │
└────────────────────────┴─────────────────┴───────────────────────────────────┴───────────────────────┴─────────┴───────────────┘
