tests/snapshots/report_snapshots__estimate_diff_table.snap
---
source: tests/report_snapshots.rs
expression: "format_cost_report_diff_sized(&old, &new, None, false)"
---
Cost diff: increment on testnet
  Old: abc123def456 (ledger 3894195)
  New: abc123def456 (ledger 3894195)

+------------------+--------+--------+----------------+
| Resource         | Old    | New    | Change (+/- %) |
+=====================================================+
| WASM Size        | 14432  | 12288  | -2144 (-14.9%) |
|------------------+--------+--------+----------------|
| CPU Instructions | 532502 | 480000 | -52502 (-9.9%) |
|------------------+--------+--------+----------------|
| RAM Bytes        | 0      | 0      | 0 (0.0%)       |
|------------------+--------+--------+----------------|
| Read Entries     | 1      | 1      | 0 (0.0%)       |
|------------------+--------+--------+----------------|
| Write Entries    | 1      | 1      | 0 (0.0%)       |
|------------------+--------+--------+----------------|
| Read Bytes       | 0      | 0      | 0 (0.0%)       |
|------------------+--------+--------+----------------|
| Write Bytes      | 136    | 96     | -40 (-29.4%)   |
|------------------+--------+--------+----------------|
| Total Fee        | 15427  | 15427  | 0 (0.0%)       |
+------------------+--------+--------+----------------+

Legend: red = increased cost, green = decreased cost.
